# actix-web-mini-to-mega

project_1/: Cargo.toml
project_1/src/: main.rs
project_2/: .env  Cargo.toml  app.db
project_2/src/: main.rs
